<resources>
  <string name="app_name">ExifTest</string>
  <string name="latitude">Latitude:</string>
  <string name="longitude">Longitude:</string>
  <string name="image_desc">image</string>
  <string name="menu_open">Open Image</string>
  <string name="menu_media">Open Media</string>
  <string name="menu_require_original">Use Q Workaround</string>
  <string name="menu_count_geotags">Count Geotags</string>
</resources>
