<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="state"
      type="androidx.lifecycle.LiveData&lt;com.commonsware.android.q.exif.MainViewState>" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
      android:id="@+id/latLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/latitude"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@{state.latitude}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintBottom_toBottomOf="@+id/latLabel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/barrier"
      app:layout_constraintTop_toTopOf="@+id/latLabel"
      tools:text="123.456" />

    <TextView
      android:id="@+id/lonLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/longitude"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/latLabel" />

    <TextView
      android:id="@+id/longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@{state.longitude}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintBottom_toBottomOf="@+id/lonLabel"
      app:layout_constraintStart_toEndOf="@+id/barrier"
      app:layout_constraintTop_toTopOf="@+id/lonLabel"
      tools:text="123.456" />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="end"
      app:constraint_referenced_ids="latLabel,lonLabel" />

    <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/image_desc"
      android:src="@{state.image}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lonLabel"
      tools:srcCompat="@tools:sample/backgrounds/scenic" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>